# monochromize

./: CHANGELOG.md  README.md  drmfilter.cabal  flake.nix  monochromize.cabal
app/: Main.hsc
cbits/: drm.c  drm.h
nix/: nixos-module.nix
